--- a/emotion_prediction/templates/logiin.html
+++ b/emotion_prediction/templates/logiin.html
@@ -27,7 +27,7 @@
       
         <!-- Template Main CSS File -->
         <link href=" {% static 'assets/css/main.css' %}" rel="stylesheet">
-        <link rel="stylesheet" href="{% static "css/rs.css" %}">
+        <link rel="stylesheet" href="{% static 'css/rs.css' %}">
       
       
       </head>
@@ -39,7 +39,7 @@
           <div class="container-fluid d-flex align-items-center justify-content-between">
             <a style=" align-items: start;" href="{% url 'home' %}" class="logo d-flex align-items-center me-auto me-xl-0">
               <img src="{% static 'assets/img/icon.png' %}">
-                  <h3>Emojion</h3>
+                  <h3><b>Emotion-On</b></h3>
                  
                 </a>
           
