--- a/emotion_prediction/static/css/rs.css
+++ b/emotion_prediction/static/css/rs.css
@@ -1,7 +1,7 @@
 * {
     margin: 0;
     padding: 0;
-    font-family: 'Poppins', sans-serif;
+    font-family:Palace Script MT;
 }
 
 section {
@@ -92,7 +92,13 @@ button {
     font-weight: 600;
     margin-top: 20px;
 }
-#header {
-    background-color: rgb(102, 97, 97);
-    padding:3px 0; /* Optional: Adjust padding as needed */
+/* #header {
+    background: #fff;
+    padding:3px 0; 
+} */
+
+h3{
+    font-family: palace script mt;
+    font-size: 40px;
+    color: black;
 }
