--- a/emotion_prediction/templates/index.html
+++ b/emotion_prediction/templates/index.html
@@ -36,7 +36,7 @@
     <div class="container-fluid d-flex align-items-center justify-content-between">
       <a style=" align-items: start;" href="{% url 'home' %}" class="logo d-flex align-items-center me-auto me-xl-0">
         <img src="{% static 'assets/img/icon.png' %}">
-            <h3>Emojion</h3>
+         <h3 style="font-family: Palace Script MT; font-size: 40px; color: black;"><b>Emotion-On</b></h3>
            
           </a>
     
@@ -64,7 +64,7 @@
     <section id="hero" class="hero">
       <img src="{% static 'assets/img/bg.jpg' %}" data-aos="fade-in">
       <div class="container">
-        <h1 data-aos="fade-up" data-aos-delay="100">EMOJ-I-ON</h1>
+        <h1 data-aos="fade-up" data-aos-delay="100">EMOTION-ON</h1>
         <h2 data-aos="fade-up" data-aos-delay="100">The Magical Wizard!</h2>
         <p data-aos="fade-up" data-aos-delay="200">"Emoj-i-on is a web application that you can use to analyze the content of your book."</p>
         <br>
