--- a/emotion_prediction/templates/profile.html
+++ b/emotion_prediction/templates/profile.html
@@ -1,102 +1,109 @@
 {% load static %}
 <!DOCTYPE html>
 <html lang="en">
-  <head>
+<head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Profile Page</title>
     <!-- Font Awesome -->
-    <link
-      rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css"
-    />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css" />
     <!-- CSS -->
-    <link rel="stylesheet" href="{%static 'assets/css/profile.css' %}" />
-  </head>
-	
-	
-  <body background="{%static 'assets/img/bg.png' %}">
+    <link rel="stylesheet" href="{% static 'assets/css/profile.css' %}" />
+</head>
+<body >
+<div class="top">
+    <header id="header" class="header fixed-top d-flex align-items-center">
+        <div class="container-fluid d-flex align-items-center justify-content-between">
+            <a href="{% url 'home' %}" class="logo d-flex align-items-center me-auto me-xl-0">
+                <img src="{% static 'assets/img/icon.png' %}">
+            </a>
+            <center><h3>Emoj-i-on</h3></center>
+            <!-- Nav Menu -->
+            <nav id="navmenu" class="navmenu">
+                <ul>
+                    <li><a href="{% url 'home' %}#hero">Home</a></li>
+                    <li><a href="{% url 'home' %}">About</a></li>
+                    <li><a href="{% url 'home' %}">Team</a></li>
+                    <li><a href="{% url 'home' %}#contact">Contact</a></li>
+                    <!-- <li><a href="{% url 'login' %}">Login</a></li> -->
+                    <span><li><a href="{% url 'profile' %}"><img src="{% static 'assets/img/proficon.png' %}"></a></span>
+                    <div class="sub-menu">
+                        <ul>
+                            <li> <a href="{% url 'password_change' %}">Change Password</a></li>
+                            <hr>
+                        </ul>
+                        
+                       
+                        <ul>
+                            <li> <a href="{% url 'logout' %}">Logout</a></li>
+                        </ul>
+                    </div>
+                    </li>
+                </ul>
+            </nav><!-- End Nav Menu -->
+        </div>
+        <script src="https://kit.fontawesome.com/b99e675b6e.js"></script>
+        <div class="wrapper">
+            <div class="left">
+                <img src="{% static 'assets/img/user.jpeg' %}" alt="user" width="100">
+                <h4>Name</h4>
+                <p>{{ logged_user.first_name }} {{ logged_user.last_name }}</p><br>
+                <hr>
+                <br>
+                <div class="optionA">
+                  <a class="a" href="{% url 'paragraph' %}">Analyze Again</a>
+                <br>
+                </div>
+
+                <div class="optionB">
+                  <a class="l" href="{% url 'logout' %}">Logout</a>
+                </div>
+
+            </div>
+            <div class="right">
+                <div class="info">
+                    <h2>INFORMATION</h2>
+                    <br>
+                    <div class="info_data">
+                        <div class="data">
+                            <h4>Email</h4>
+                            <p>{{ logged_user.email }}</p>
+                        </div>
+                        <div class="data">
+                            <h4>Username</h4>
+                            <p>{{ logged_user.username }}</p>
+                        </div>
+                    </div>
+                </div>
+                <hr><br>
+                <div class="projects">
+                    <h2>STORIES</h2>
+                    <div class="projects_data">
+                        <div class="data">
+                            <h4>Recent</h4>
+                            <ol>
+                                {% for phrases in user_stories|slice:":8" %}
+                                <li>
+                                    <p>{{ phrases.phrase }} = {{ phrases.analyzed_emotion }}</p>
+                                </li>
+                                {% endfor %}
+                                <br>
+                                <br>
+                                <div class="pagination">
+                                {% include 'includes/pagination.html' %}
+                                </div>
+                            </ol>
+                            <!-- <p>2</p>
+                            <p>3</p>
+                            <p>4</p> -->
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <!-- Pagination -->
     
-	 <div class="top">
-	<header id="header" class="header fixed-top d-flex align-items-center">
-    <div class="container-fluid d-flex align-items-center justify-content-between">
-
-      <a href="{% url 'home' %}" class="logo d-flex align-items-center me-auto me-xl-0">
-		<img src="{%static 'assets/img/icon.png' %}">
-      </a>
-      <center><h3>Emoj-i-on</h3></center>
-      <!-- Nav Menu -->
-      <nav id="navmenu" class="navmenu">
-        <ul>
-          <li><a href="{% url 'home' %}#hero" >Home</a></li>
-          <li><a href="{% url 'home' %}">About</a></li>
-          <li><a href="{% url 'home' %}">Team</a></li>
-          <li><a href="{% url 'home' %}#contact">Contact</a></li>
-		  <!-- <li><a href="{% url 'login' %}">Login</a></li> -->
-			<span><li><a href="{%url 'profile' %}"><img src="{%static 'assets/img/proficon.png' %}"></a></span>
-			<div class="sub-menu">
-			  <ul>
-				  <li> <a href="{%url 'password_change' %}">Change Password</a></li>
-				  <hr>
-				</ul>
-				
-			   <ul>
-				  <li> <a href="{%url 'logout' %}">Logout</a></li>
-				  
-				</ul>
-			  </div>
-			</li>
-
-        </ul>
-      </nav><!-- End Nav Menu -->
-
-     
-
-    </div>
-<script src="https://kit.fontawesome.com/b99e675b6e.js"></script>
-<div class="wrapper">
-    <div class="left">
-        <img src="{%static 'assets/img/user.jpeg' %}" alt="user" width="100">
-        <h4>Name</h4>
-         <p>{{ logged_user.first_name }} {{ logged_user.last_name }}</p>
-    </div>
-    <div class="right">
-        <div class="info">
-            <h2>INFORMATION</h2>
-            <br>
-            <div class="info_data">
-                 <div class="data">
-                    <h4>Email</h4>
-                    <p>{{ logged_user.email }}</p>
-                 </div>
-                 
-            </div>
-        </div>
-      
-      <div class="projects">
-            <h2>STORIES</h2>
-            <div class="projects_data">
-                 <div class="data">
-                    <h4>Recent</h4>
-                    <ol>
-                      {% for phrases in user_stories|slice:":5" %}
-                          <li>
-                              <p>{{ phrases.phrase }}</p>
-                              <p>{{ phrases.analyzed_emotion }}</p>
-                          </li>
-                      {% endfor %}
-                    </ol>
-                    <!-- <p>2</p>
-                    <p>3</p>
-                    <p>4</p> -->
-                 </div>
-                 
-            </div>
-        </div>
-      
-        
-    </div>
-</div>
-	  
-	</body>
+</body>
 </html>
