--- a/emotion_prediction/static/assets/css/profile.css
+++ b/emotion_prediction/static/assets/css/profile.css
@@ -151,7 +151,7 @@ body{
 
 .top h3{
  font-size: 25px;
- font-family: Maiden Orange;
+ font-family: Palace Script MT;
 color: black;
  position: absolute;
 margin-left: 130px;
