--- a/emotion_prediction/templates/emoji-whole.html
+++ b/emotion_prediction/templates/emoji-whole.html
@@ -66,7 +66,7 @@
       <br>	
 	
 	<div class="container">
-		<h1>CHILDHOOD TALES EMOTION PREDICTOR</h1>
+		<h1 style="letter-spacing: 7px;">CHILDHOOD TALES EMOTION PREDICTOR</h1>
 		<form method="post" enctype="multipart/form-data" action="{% url 'whole' %}">
 			{% csrf_token %}
 		
@@ -85,7 +85,7 @@
 		{% endif %}
 	
 	</div>
-	<div class="emoji">
+	<div class="emoji" style="padding-top: 510px;">
 		<div class="word">
 			<h6 class="fear" style="padding-left: 15px; color: #0a0303;">FEAR</h6>
 
