--- a/emotion_prediction/templates/sign_up.html
+++ b/emotion_prediction/templates/sign_up.html
@@ -47,7 +47,7 @@
           <div class="container-fluid d-flex align-items-center justify-content-between">
             <a style=" align-items: start;"href="{% url 'home' %}" class="logo d-flex align-items-center me-auto me-xl-0">
               <img src="{% static 'assets/img/icon.png' %}">
-                  <h3>Emojion</h3>
+                  <h3 style="font-family: Palace Script MT; font-size: 40px;">Emotion-On</h3>
                  
                 </a>
           
@@ -69,7 +69,8 @@
         </header>
 
 <body>
-    <section>
+    <section style="padding-top: 130px;">
+        
         <div class="form-box">
             {% if not success %}
                 <h5 style="color: white;">CREATE AN ACCOUNT</h5>
