--- a/emotion_prediction/templates/emoji.html
+++ b/emotion_prediction/templates/emoji.html
@@ -1,166 +1,165 @@
-	{% load static %}
-	<!Doctype html>
-	<html>
-	<head>
-	<meta charset="utf-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<link rel="stylesheet" href="{%static 'assets/css/emoji.css' %}">
-	<title>Emotion-On</title>
-	<style>
-		/* Style for the normal state of the button */
-		.paragraph_btn {
-			
-			text-decoration: none;
-			background-color:#0a0303;
-			color: #ffffff;
-			cursor: pointer;
-		}
-
-		/* Style for the active state of the button */
-		.paragraph_btn.active {
-			background-color: black;
-		}
-		.emoji{
-			padding-top: 500px;
-			justify-content: center;
-		}
-
-	.word{
-		padding-left: 550px;
+{% load static %}
+<!Doctype html>
+<html>
+<head>
+<meta charset="utf-8">
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<link rel="stylesheet" href="{%static 'assets/css/emoji.css' %}">
+<title>Emotion-On</title>
+<style>
+	/* Style for the normal state of the button */
+	.paragraph_btn {
+		
+		text-decoration: none;
+		background-color:#0a0303;
+		color: #ffffff;
+		cursor: pointer;
 	}
-	h1{
-		padding-bottom: 50px;
-		color: black;
 
+	/* Style for the active state of the button */
+	.paragraph_btn.active {
+		background-color: black;
 	}
-	.percent{
-		padding-left: 100px;
+	.emoji{
+		padding-top: 500px;
+		justify-content: center;
 	}
-		
-	</style>
-	</head>
-	<body background="{%static 'assets/img/paper.jpg' %}">
-		<div class="top">
-		<header id="header" class="header fixed-top d-flex align-items-center">
-		<div class="container-fluid d-flex align-items-center justify-content-between">
 
-		<a href="{% url 'home' %}" class="logo d-flex align-items-center me-auto me-xl-0">
-			<img src="{% static 'assets/img/icon.png' %}">
-		</a>
-	<h3>Emotion-On</h3>
-		<!-- Nav Menu -->
-		<nav id="navmenu" class="navmenu">
-			<ul>
-			<li><a href="{% url 'home' %}#hero" >Home</a></li>
-			<li><a href="{% url 'home' %}#about">About</a></li>
-			<li><a href="{% url 'home' %}#team">Team</a></li>
-			<li><a href="{% url 'home' %}#contact">Contact</a></li>
-			<li><a href="{% url 'profile' %}"><img src="{%static 'assets/img/user.png' %}" title="Profile" style= "padding-bottom: 5px;"></a></li>
+.word{
+	padding-left: 550px;
+}
+h1{
+	padding-bottom: 50px;
+	color: black;
 
-			</ul>
-		</nav>
-		</div>
-		<br>	
-		
-		
-	<div class="container">
-		<h1>CHILDHOOD TALES EMOTION PREDICTOR</h1>
-		<!-- <form>
-			<input id="text" type="text" name="" placeholder="Enter text here...">
-		</form>   -->
-
-		<form method="post" action="{% url 'paragraph' %}">
-			{% csrf_token %}
-			{{ form.story }}
-			<button type="submit" name="analyze" id="analyze" class="analyze_btn">ANALYZE</button>
-		</form>
-		<button type="submit1" name="paragraph" id="paragraph" class="paragraph_btn" >PARAGRAPH</button>
-		<a href="{%url 'whole' %}"><button type="submit2" name="whole" id="whole" class="whole_btn">WHOLE</button></a>
-		{% if analyzed_story %}
-			<a href="{% url 'download-result' %}">
-			<!-- <img src="{%static 'assets/img/dl.png' %}" title="Download PDF" style="height: 70px; margin-left: 20px; margin-bottom: -89px;"> -->
-			<button class="cssbuttons-io-button" style="height: 10px;">
-				<svg height="24" width="24" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path d="M0 0h24v24H0z" fill="none"></path><path d="M1 14.5a6.496 6.496 0 0 1 3.064-5.519 8.001 8.001 0 0 1 15.872 0 6.5 6.5 0 0 1-2.936 12L7 21c-3.356-.274-6-3.078-6-6.5zm15.848 4.487a4.5 4.5 0 0 0 2.03-8.309l-.807-.503-.12-.942a6.001 6.001 0 0 0-11.903 0l-.12.942-.805.503a4.5 4.5 0 0 0 2.029 8.309l.173.013h9.35l.173-.013zM13 12h3l-4 5-4-5h3V8h2v4z" fill="currentColor"></path></svg>
-				<span style="font-size: small;">Download</span>
-			  </button>
-		
-		{% endif %}
-	</a>
-	</div>
-		<!-- <button type="submit3" name="analyze" id="analyze" class="analyze_btn">ANALYZE</button> -->
-
-		<div class="emoji" >
-		<div class="word">
-		<h6 class="fear" style="padding-left: 15px; color: #0a0303;">FEAR</h6>
-
-		<h6 class="anger" style="color: #0a0303;">ANGER</h6>
-
-		<h6 class="joy" style="color: #0a0303;">JOY</h6>
-
-		<h6 class="sadness" style="color: #0a0303;">SADNESS</h6>
-
-		<h6 class="disgust" style="color: #0a0303;">DISGUST</h6>
-
-		<h6 class="surprise" style="color: #0a0303;">SUPRISE</h6>
-		<br>
-		</div>
-		<img class="img1" src="{%static 'assets/img/fear.png' %}" style="padding-left: 20px;">
-
-		<img class="img2" src="{%static 'assets/img/angry.png' %}">
-
-		<img class="img3" src="{%static 'assets/img/happy.png' %}">
-
-		<img class="img4" src="{%static 'assets/img/sad.png' %}">
-
-		<img class="img5" src="{%static 'assets/img/disgust.png' %}">
-
-		<img class="img6" src="{%static 'assets/img/surprise.png' %}">
-		<br>
-		{%if success %}
-		<div class="percent" style="padding-left: 20px;">
-			<p class="p1">{{ analyzed_story.fear }}%</p>
-
-			<p class="p2">{{ analyzed_story.anger }}%</p>
-
-			<p class="p3">{{ analyzed_story.joy }}%</p>
-
-			<p class="p4">{{ analyzed_story.sadness }}%</p>
-
-			<p class="p5">{{ analyzed_story.disgust }}%</p>
-
-			<p class="p6">{{ analyzed_story.surprise }}%</p>
-		{% else %}
-	</div>
-			<p class="p1" style="padding-left: 33px; color: #0a0303;" >0%</p>
-
-			<p class="p2" style="padding-left: 33px; color: #0a0303;">0%</p>
-
-			<p class="p3" style="padding-left: 30px; color: #0a0303;">0%</p>
-
-			<p class="p4" style="padding-left: 34px; color: #0a0303;">0%</p>
-
-			<p class="p5" style="padding-left: 33px; color: #0a0303;">0%</p>
-
-			<p class="p6" style="padding-left: 28px; color: #0a0303;" >0%</p>
-		{% endif %}
-	<br>
-
-	<p class="emotion">Emotion Predicted: {{ analyzed_story.analyzed_emotion }}</p>
+}
+.percent{
+	padding-left: 100px;
+}
 	
+</style>
+</head>
+<body background="{%static 'assets/img/brown.jpg' %}" style=" background-size: cover;">
+	<div class="top">
+	<header id="header" class="header fixed-top d-flex align-items-center">
+	<div class="container-fluid d-flex align-items-center justify-content-between">
+
+	<a href="{% url 'home' %}" class="logo d-flex align-items-center me-auto me-xl-0">
+		<img src="{% static 'assets/img/icon.png' %}">
+	</a>
+<h3>Emotion-On</h3>
+	<!-- Nav Menu -->
+	<nav id="navmenu" class="navmenu">
+		<ul>
+		<li><a href="{% url 'home' %}#hero" >Home</a></li>
+		<li><a href="{% url 'home' %}#about">About</a></li>
+		<li><a href="{% url 'home' %}#team">Team</a></li>
+		<li><a href="{% url 'home' %}#contact">Contact</a></li>
+		<li><a href="{% url 'profile' %}"><img src="{%static 'assets/img/user.png' %}" title="Profile" style= "padding-bottom: 5px;"></a></li>
+
+		</ul>
+	</nav>
+	</div>
+	<br>	
+	
+	
+<div class="container">
+	<h1 style="letter-spacing: 7px;">CHILDHOOD TALES EMOTION PREDICTOR</h1>
+	<!-- <form>
+		<input id="text" type="text" name="" placeholder="Enter text here...">
+	</form>   -->
+
+	<form method="post" action="{% url 'paragraph' %}">
+		{% csrf_token %}
+		{{ form.story }}
+		<button type="submit" name="analyze" id="analyze" class="analyze_btn">ANALYZE</button>
+	</form>
+	<button type="submit1" name="paragraph" id="paragraph" class="paragraph_btn" >PARAGRAPH</button>
+	<a href="{%url 'whole' %}"><button type="submit2" name="whole" id="whole" class="whole_btn">WHOLE</button></a>
+	{% if analyzed_story %}
+		<a href="{% url 'download-result' %}">
+		<!-- <img src="{%static 'assets/img/dl.png' %}" title="Download PDF" style="height: 70px; margin-left: 20px; margin-bottom: -89px;"> -->
+		<button class="cssbuttons-io-button" style="height: 10px;">
+			<svg height="24" width="24" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path d="M0 0h24v24H0z" fill="none"></path><path d="M1 14.5a6.496 6.496 0 0 1 3.064-5.519 8.001 8.001 0 0 1 15.872 0 6.5 6.5 0 0 1-2.936 12L7 21c-3.356-.274-6-3.078-6-6.5zm15.848 4.487a4.5 4.5 0 0 0 2.03-8.309l-.807-.503-.12-.942a6.001 6.001 0 0 0-11.903 0l-.12.942-.805.503a4.5 4.5 0 0 0 2.029 8.309l.173.013h9.35l.173-.013zM13 12h3l-4 5-4-5h3V8h2v4z" fill="currentColor"></path></svg>
+			<span style="font-size: small;">Download</span>
+		  </button>
+	
+	{% endif %}
+</a>
 </div>
-	<script>
-		// JavaScript function to toggle the active state of the buttons
-		function toggleButton(button) {
-			// Remove active class from all buttons
-			var buttons = document.querySelectorAll('.my-button');
-			buttons.forEach(function(btn) {
-				btn.classList.remove('active');
-			});
+	<!-- <button type="submit3" name="analyze" id="analyze" class="analyze_btn">ANALYZE</button> -->
 
-			// Add active class to the clicked button
-			button.classList.add('active');
-		}
-	</script>
-	</body>
-	</html>
+	<div class="emoji" style="padding-top: 510px;">
+	<div class="word">
+	<h6 class="fear" style="padding-left: 15px; color: #0a0303;">FEAR</h6>
 
+	<h6 class="anger" style="color: #0a0303;">ANGER</h6>
+
+	<h6 class="joy" style="color: #0a0303;">JOY</h6>
+
+	<h6 class="sadness" style="color: #0a0303;">SADNESS</h6>
+
+	<h6 class="disgust" style="color: #0a0303;">DISGUST</h6>
+
+	<h6 class="surprise" style="color: #0a0303;">SUPRISE</h6>
+	<br>
+	</div>
+	<img class="img1" src="{%static 'assets/img/fear.png' %}" style="padding-left: 20px;">
+
+	<img class="img2" src="{%static 'assets/img/angry.png' %}">
+
+	<img class="img3" src="{%static 'assets/img/happy.png' %}">
+
+	<img class="img4" src="{%static 'assets/img/sad.png' %}">
+
+	<img class="img5" src="{%static 'assets/img/disgust.png' %}">
+
+	<img class="img6" src="{%static 'assets/img/surprise.png' %}">
+	<br>
+	{%if success %}
+	<div class="percent" style="padding-left: 20px;">
+		<p class="p1">{{ analyzed_story.fear }}%</p>
+
+		<p class="p2">{{ analyzed_story.anger }}%</p>
+
+		<p class="p3">{{ analyzed_story.joy }}%</p>
+
+		<p class="p4">{{ analyzed_story.sadness }}%</p>
+
+		<p class="p5">{{ analyzed_story.disgust }}%</p>
+
+		<p class="p6">{{ analyzed_story.surprise }}%</p>
+	{% else %}
+</div>
+		<p class="p1" style="padding-left: 33px; color: #0a0303;" >0%</p>
+
+		<p class="p2" style="padding-left: 33px; color: #0a0303;">0%</p>
+
+		<p class="p3" style="padding-left: 30px; color: #0a0303;">0%</p>
+
+		<p class="p4" style="padding-left: 34px; color: #0a0303;">0%</p>
+
+		<p class="p5" style="padding-left: 33px; color: #0a0303;">0%</p>
+
+		<p class="p6" style="padding-left: 28px; color: #0a0303;" >0%</p>
+	{% endif %}
+<br>
+
+<p class="emotion">Emotion Predicted: {{ analyzed_story.analyzed_emotion }}</p>
+
+</div>
+<script>
+	// JavaScript function to toggle the active state of the buttons
+	function toggleButton(button) {
+		// Remove active class from all buttons
+		var buttons = document.querySelectorAll('.my-button');
+		buttons.forEach(function(btn) {
+			btn.classList.remove('active');
+		});
+
+		// Add active class to the clicked button
+		button.classList.add('active');
+	}
+</script>
+</body>
+</html>
