--- a/emotion_prediction/templates/profile.html
+++ b/emotion_prediction/templates/profile.html
@@ -18,7 +18,7 @@
             <a href="{% url 'home' %}" class="logo d-flex align-items-center me-auto me-xl-0">
                 <img src="{% static 'assets/img/icon.png' %}">
             </a>
-            <center><h3>Emoj-i-on</h3></center>
+            <center><h3 style="font-family: Palace Script MT; font-size: 40px;">Emotion-On</h3></center>
             <!-- Nav Menu -->
             <nav id="navmenu" class="navmenu">
                 <ul>
@@ -27,7 +27,7 @@
                     <li><a href="{% url 'home' %}">Team</a></li>
                     <li><a href="{% url 'home' %}#contact">Contact</a></li>
                     <!-- <li><a href="{% url 'login' %}">Login</a></li> -->
-                    <span><li><a href="{% url 'profile' %}"><img src="{% static 'assets/img/proficon.png' %}"></a></span>
+                    <span><li><a href="{% url 'profile' %}"><img src="{% static 'assets/img/user.png' %}"></a></span>
                     <div class="sub-menu">
                         <ul>
                             <li> <a href="{% url 'password_change' %}">Change Password</a></li>
@@ -84,9 +84,10 @@
                             <h4>Recent</h4>
                             <ol>
                                 {% for phrases in user_stories|slice:":8" %}
-                                <li>
-                                    <p>{{ phrases.phrase }} = {{ phrases.analyzed_emotion }}</p>
-                                </li>
+                                    <li>
+                                        <p>{{ phrases.phrase }} = {{ phrases.analyzed_emotion }}</p>
+                                    </li>
+                               
                                 {% endfor %}
                                 <br>
                                 <br>
