--- a/emotion_prediction/templates/emoji.html
+++ b/emotion_prediction/templates/emoji.html
@@ -5,6 +5,8 @@
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="{%static 'assets/css/emoji.css' %}">
+<link href="https://fonts.googleapis.com/css2?family=Fontdiner+Swanky&family=Protest+Revolution&family=Rubik+Wet+Paint&display=swap" rel="stylesheet">
+
 <title>Emotion-On</title>
 <style>
 	/* Style for the normal state of the button */
@@ -30,16 +32,20 @@
 }
 h1{
 	padding-bottom: 50px;
-	color: black;
+	color: #FFE347;
+	font-family:"Fontdiner Swanky";
 
 }
 .percent{
 	padding-left: 100px;
 }
+.analyze_btn:hover{
+	background-color:#C7DBE6;
+}
 	
 </style>
 </head>
-<body background="{%static 'assets/img/brown.jpg' %}" style=" background-size: cover;">
+<body background="{%static 'img/cyan2.png' %}" style=" background-size: cover;">
 	<div class="top">
 	<header id="header" class="header fixed-top d-flex align-items-center">
 	<div class="container-fluid d-flex align-items-center justify-content-between">
@@ -55,8 +61,8 @@ h1{
 		<li><a href="{% url 'home' %}#about">About</a></li>
 		<li><a href="{% url 'home' %}#team">Team</a></li>
 		<li><a href="{% url 'home' %}#contact">Contact</a></li>
-		<li><a href="{% url 'profile' %}"><img src="{%static 'assets/img/user.png' %}" title="Profile" style= "padding-bottom: 5px;"></a></li>
-
+		<li><a href="{% url 'profile' %}"><img src="{%static 'assets/img/user.png' %}" title="Profile" style= "padding-bottom: 5px;"></a>
+		</li>
 		</ul>
 	</nav>
 	</div>
@@ -64,7 +70,7 @@ h1{
 	
 	
 <div class="container">
-	<h1 style="letter-spacing: 7px;">CHILDHOOD TALES EMOTION PREDICTOR</h1>
+	<h1 style="letter-spacing: 7px;">EMOTION-ON</h1>
 	<!-- <form>
 		<input id="text" type="text" name="" placeholder="Enter text here...">
 	</form>   -->
@@ -82,7 +88,7 @@ h1{
 		<button class="cssbuttons-io-button" style="height: 10px;">
 			<svg height="24" width="24" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path d="M0 0h24v24H0z" fill="none"></path><path d="M1 14.5a6.496 6.496 0 0 1 3.064-5.519 8.001 8.001 0 0 1 15.872 0 6.5 6.5 0 0 1-2.936 12L7 21c-3.356-.274-6-3.078-6-6.5zm15.848 4.487a4.5 4.5 0 0 0 2.03-8.309l-.807-.503-.12-.942a6.001 6.001 0 0 0-11.903 0l-.12.942-.805.503a4.5 4.5 0 0 0 2.029 8.309l.173.013h9.35l.173-.013zM13 12h3l-4 5-4-5h3V8h2v4z" fill="currentColor"></path></svg>
 			<span style="font-size: small;">Download</span>
-		  </button>
+		</button>
 	
 	{% endif %}
 </a>
@@ -104,17 +110,17 @@ h1{
 	<h6 class="surprise" style="color: #0a0303;">SUPRISE</h6>
 	<br>
 	</div>
-	<img class="img1" src="{%static 'assets/img/fear.png' %}" style="padding-left: 20px;">
+	<img class="img1" src="{%static '/emotions/fear.png' %}" style="padding-left: 20px;">
 
-	<img class="img2" src="{%static 'assets/img/angry.png' %}">
+	<img class="img2" src="{%static '/emotions/angry.png' %}">
 
-	<img class="img3" src="{%static 'assets/img/happy.png' %}">
+	<img class="img3" src="{%static '/emotions/happy.png' %}">
 
-	<img class="img4" src="{%static 'assets/img/sad.png' %}">
+	<img class="img4" src="{%static '/emotions/sad.png' %}">
 
-	<img class="img5" src="{%static 'assets/img/disgust.png' %}">
+	<img class="img5" src="{%static '/emotions/disgust.png' %}">
 
-	<img class="img6" src="{%static 'assets/img/surprise.png' %}">
+	<img class="img6" src="{%static '/emotions/surprise.png' %}">
 	<br>
 	{%if success %}
 	<div class="percent" style="padding-left: 20px;">
