--- a/emotion_prediction/templates/emoji.html
+++ b/emotion_prediction/templates/emoji.html
@@ -57,10 +57,10 @@ h1{
 	<!-- Nav Menu -->
 	<nav id="navmenu" class="navmenu">
 		<ul>
-		<li><a href="{% url 'home' %}#hero" >Home</a></li>
+		<!-- <li><a href="{% url 'home' %}#hero" >Home</a></li>
 		<li><a href="{% url 'home' %}#about">About</a></li>
 		<li><a href="{% url 'home' %}#team">Team</a></li>
-		<li><a href="{% url 'home' %}#contact">Contact</a></li>
+		<li><a href="{% url 'home' %}#contact">Contact</a></li> -->
 		<li><a href="{% url 'profile' %}"><img src="{%static 'assets/img/user.png' %}" title="Profile" style= "padding-bottom: 5px;"></a>
 		</li>
 		</ul>
@@ -70,7 +70,7 @@ h1{
 	
 	
 <div class="container">
-	<h1 style="letter-spacing: 7px;">EMOTION-ON</h1>
+	<h1 style="letter-spacing: 7px; ">EMOTION-ON</h1>
 	<!-- <form>
 		<input id="text" type="text" name="" placeholder="Enter text here...">
 	</form>   -->
@@ -95,7 +95,7 @@ h1{
 </div>
 	<!-- <button type="submit3" name="analyze" id="analyze" class="analyze_btn">ANALYZE</button> -->
 
-	<div class="emoji" style="padding-top: 510px;">
+	<div class="emoji" style="padding-top: 490px;">
 	<div class="word">
 	<h6 class="fear" style="padding-left: 15px; color: #0a0303;">FEAR</h6>
 
