--- a/emotion_prediction/templates/emoji-whole.html
+++ b/emotion_prediction/templates/emoji-whole.html
@@ -5,6 +5,8 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="{%static 'assets/css/emoji.css'%}">
+  <link href="https://fonts.googleapis.com/css2?family=Fontdiner+Swanky&family=Protest+Revolution&family=Rubik+Wet+Paint&display=swap" rel="stylesheet">
+
   <title>EMOJ-I-ON</title>
   <style>
 	/* Style for the normal state of the button */
