--- a/emotion_prediction/templates/index.html
+++ b/emotion_prediction/templates/index.html
@@ -35,8 +35,7 @@
   <header id="header" class="header fixed-top d-flex align-items-center">
     <div class="container-fluid d-flex align-items-center justify-content-between">
       <a style=" align-items: start;" href="{% url 'home' %}" class="logo d-flex align-items-center me-auto me-xl-0">
-        <img src="{% static 'assets/img/icon.png' %}">
-         <h3 style="font-family: Palace Script MT; font-size: 40px; color: rgb(251, 250, 250);"><b>Emotion-On</b></h3>
+        <img src="{% static 'newimg/log.png' %}">
            
           </a>
     
