--- a/emotion_prediction/templates/logiin_error.html
+++ b/emotion_prediction/templates/logiin_error.html
@@ -25,6 +25,7 @@
 
         <form method="POST" action="">
           {% csrf_token %}
+          <h3 style="color:red;text-align:center;display:flex;justify-content:center">Invalid Input!</h3>
             <div class="input">
                 <i class="bi bi-person-circle icon"></i>&nbsp;
                 <input style="width: 70%;padding: 10px;border-radius: 5px;font-size: 18px;" 
