--- a/emotion_prediction/templates/emoji-whole.html
+++ b/emotion_prediction/templates/emoji-whole.html
@@ -1,164 +1,161 @@
 {% load static %}
-<!Doctype html>
-<html>
+<!DOCTYPE html>
+<html lang="en">
 <head>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" href="{%static 'assets/css/emoji.css'%}">
-  <link href="https://fonts.googleapis.com/css2?family=Fontdiner+Swanky&family=Protest+Revolution&family=Rubik+Wet+Paint&display=swap" rel="stylesheet">
-
-  <title>EMOJ-I-ON</title>
-  <style>
-	/* Style for the normal state of the button */
-	.whole_btn {
-		
-		text-decoration: none;
-		background-color:#0a0303;
-		color: #ffffff;
-		cursor: pointer;
-	}
-
-	/* Style for the active state of the button */
-	.whole_btn.active {
-		background-color: black;
-	}
-
-	
-	.emoji{
-			padding-top: 500px;
-			justify-content: center;
-		}
-
-	.word{
-		padding-left: 550px;
-	}
-	
-		#text{
-	margin-top: 50px;
-}
-h1{
-	
-	color: #FFE347;
-	font-family:"Fontdiner Swanky";
-}
-		
-</style>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
+    <link href="https://fonts.googleapis.com/css2?family=DM+Serif+Display:ital@0;1&family=Nabla&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="{% static 'newcss/whole.css' %}">
+    <title>Document</title>
+    
 </head>
-<body background="{%static 'img/cyan2.png' %}" style=" background-size: cover;">
-<!-- style=" background: linear-gradient(to bottom , pink,#feff79,#d2ff9d,	#b2d7df);background-size: 100% 100vh;"> -->
-	<div class="top">
-	<header id="header" class="header fixed-top d-flex align-items-center">
-    <div class="container-fluid d-flex align-items-center justify-content-between">
+<body>
+    <nav>
+        <img src="{% static 'newimg/log.png' %}" alt="">
+        <a class="four" href="{% url 'home' %}#hero">Home</a>
+        <a class="four" href="{% url 'home' %}#about">About</a>
+        <a class="four" href="{% url 'home' %}#team">Team</a>
+        <a href="{% url 'profile' %}" class="profile"><i class="bi bi-person-circle"></i></a>
+    </nav>
+    
+    <main>
+        <form method="post" enctype="multipart/form-data" action="{% url 'whole' %}">
+            {% csrf_token %}
+        <div class="container">
+            <div class="row justify-content-center mt-5">
+                <div class="col-md-6">
+                    
+                    <div class="innput" style="display:flex;margin-left:96%; width:50%;">
+                        <h4 style="margin-left:-40%;font-size:18px;">Select Input: &nbsp; </h4>
+                        <div 
+                        style="width:20%;" class="input-active">
+                            <a style="text-decoration:none;" href="{% url 'paragraph' %}">Sentece</a>
+                        </div>
+                        <div class="input-nonactive" style="width:35%;background-color:white;text-align:center;border-radius:10px;">
+                            <a style="text-decoration:none;" href="{% url 'whole' %}">Whole Story</a>
+                        </div> 
+                    </div>
+                    <div class="upload">
+					<input id="text" type="file" name="file" accept=".txt">
+					</div>				
+					<input style="color: rgb(0, 0, 0);" class="analyze-btn"  name="analyze" id="analyze" type="submit" value="Analyze">
+                    
+                </div>
+            </div>
+        </div>
+        </form>
+        <center><hr style="border: solid;width:80%"></center>
+        <div class="emotions">
+            <div class="container text-center">
+                <div class="row">
+                    <div class="col">
+                        Joy
+                    </div>
+                    <div class="col">
+                        Sadness
+                    </div>
+                    <div class="col">
+                        Fear
+                    </div>
+                    <div class="col">
+                        Anger
+                    </div>
+                    <div class="col">
+                        Disgust
+                    </div>
+                    <div class="col">
+                        Surprise
+                    </div>
+                </div>
+            </div>
 
-      <a href="{% url 'home' %}" class="logo d-flex align-items-center me-auto me-xl-0">
-		<img src="{%static 'assets/img/icon.png' %}">
-      </a>
-      <center><h3>Emotion-On</h3></center>
-      <!-- Nav Menu -->
-      <nav id="navmenu" class="navmenu">
-        <ul>
-          <!-- <li><a href="{% url 'home' %}#hero" >Home</a></li>
-          <li><a href="{% url 'home' %}#about">About</a></li>
-          <li><a href="{% url 'home' %}#team">Team</a></li>
-          <li><a href="{% url 'home' %}#contact">Contact</a></li> -->
-		  <!-- <li><a href="{% url 'login' %}">Login</a></li> -->
-		<li><a href="{% url 'profile' %}"><img src="{% static 'assets/img/user.png' %}"  title="Profile"></a></li>
+            <div class="container text-center">
+                <div class="row">
+                    <div class="col">
+                        &nbsp; &nbsp; &nbsp;<img src="{% static 'newimg/happy.png' %}" alt="">
+                    </div>
+                    <div class="col">
+                        &nbsp; &nbsp; <img src="{% static 'newimg/sad.png' %}" alt="">
+                    </div>
+                    <div class="col">
+                        <img src="{% static 'newimg/fear.png' %}" alt="">
+                    </div>
+                    <div class="col">
+                        <img src="{% static 'newimg/angry.png' %}" alt="">
+                    </div>
+                    <div class="col">
+                        <img src="{% static 'newimg/disgust.png' %}" alt="">
+                    </div>
+                    <div class="col">
+                        <img src="{% static 'newimg/surprise.png' %}" alt="">
+                    </div>
+                </div>
+            </div>
+            {%if success %}
+            <div class="container text-center">
+                <div class="row" >
+                    <div class="col">
+                        <p> {{ analyzed_story.joy }}%</p>
+                    </div>
+                    <div class="col">
+                        <p>{{ analyzed_story.sadness }}%</p>
+                    </div>
+                    <div class="col">
+                        <p>{{ analyzed_story.fear }}%</p>
+                    </div>
+                    <div class="col">
+                        <p>{{ analyzed_story.anger }}%</p>
+                    </div>
+                    <div class="col">
+                        <p>{{ analyzed_story.disgust }}%</p>
+                    </div>
+                    <div class="col">
+                        <p>{{ analyzed_story.surprise }}%</p>
+                    </div>
+                </div>
+            </div>
+            {% else %}
+            <div class="container text-center">
+                <div class="row" >
+                    <div class="col">
+                        <p>0%</p>
+                    </div>
+                    <div class="col">
+                        <p>0%</p>
+                    </div>
+                    <div class="col">
+                        <p>0%</p>
+                    </div>
+                    <div class="col">
+                        <p>0%</p>
+                    </div>
+                    <div class="col">
+                        <p>0%</p>
+                    </div>
+                    <div class="col">
+                        <p>0%</p>
+                    </div>
+                </div>
+            </div>
+            {% endif %}
+        </div>
+        <div class="container">
+            <div class="row justify-content-center mt-5">
+                <div class="col-md-4">
+                    <h3>Emotion Predicted: {{ analyzed_story.analyzed_emotion }}</h3>
+                </div>
+            </div>
+        </div>
+    </main>
+    
+    
 
-        </ul>
-      </nav><!-- End Nav Menu --> 
-      </div>
-      <br>	
-	  
-
-	<div class="container" style="padding-top: -10px;">
-		<h1 style="letter-spacing: 7px; padding-top: -10; font-family:Fontdiner Swanky;">EMOTION-ON</h1>
-		<form method="post" enctype="multipart/form-data" action="{% url 'whole' %}">
-			{% csrf_token %}
-		
-				<input  style="margin-top: 75px;" id="text" type="file" name="file" accept=".txt" placeholder="Upload your file here...">
-		
-			
-			<button type="submit" name="analyze" id="analyze" class="analyze_btn">ANALYZE</button>
-		</form>  
-		<a href="{%url 'paragraph' %}"><button type="submit1" name="paragraph" id="paragraph" class="paragraph_btn">PARAGRAPH</button></a>
-		<button type="submit2" name="whole" id="whole" class="whole_btn">WHOLE</button>
-		{% if analyzed_story %}
-			<a href="{% url 'download-result' %}"><button class="cssbuttons-io-button" style="height: 10px; padding-left: -30px;">
-				<svg height="24" width="24" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path d="M0 0h24v24H0z" fill="none"></path><path d="M1 14.5a6.496 6.496 0 0 1 3.064-5.519 8.001 8.001 0 0 1 15.872 0 6.5 6.5 0 0 1-2.936 12L7 21c-3.356-.274-6-3.078-6-6.5zm15.848 4.487a4.5 4.5 0 0 0 2.03-8.309l-.807-.503-.12-.942a6.001 6.001 0 0 0-11.903 0l-.12.942-.805.503a4.5 4.5 0 0 0 2.029 8.309l.173.013h9.35l.173-.013zM13 12h3l-4 5-4-5h3V8h2v4z" fill="currentColor"></path></svg>
-				<span style="font-size: small;">Download</span>
-			  </button></a>
-		{% endif %}
+    <footer>
+        <p>&copy;EMOJI-ON || 2024</p>
+    </footer>
 	
-	</div>
-	<div class="emoji" style="padding-top: 49wor0px;">
-		<div class="word">
-			<h6 class="fear" style="padding-left: 15px; color: #0a0303;">FEAR</h6>
-
-			<h6 class="anger" style="color: #0a0303;">ANGER</h6>
-	
-			<h6 class="joy" style="color: #0a0303;">JOY</h6>
-	
-			<h6 class="sadness" style="color: #0a0303;">SADNESS</h6>
-	
-			<h6 class="disgust" style="color: #0a0303;">DISGUST</h6>
-	
-			<h6 class="surprise" style="color: #0a0303;">SUPRISE</h6>
-		<br>
-		</div>
-		<img class="img1" src="{%static '/emotions/fear.png' %}" style="padding-left: 20px;">
-
-	<img class="img2" src="{%static '/emotions/angry.png' %}">
-
-	<img class="img3" src="{%static '/emotions/happy.png' %}">
-
-	<img class="img4" src="{%static '/emotions/sad.png' %}">
-
-	<img class="img5" src="{%static '/emotions/disgust.png' %}">
-
-	<img class="img6" src="{%static '/emotions/surprise.png' %}">
-	<br>
-		{%if success %}
-		<div class="percent" style="padding-left: 20px;">
-			<p class="p1">{{ analyzed_story.fear }}%</p>
-
-			<p class="p2">{{ analyzed_story.anger }}%</p>
-
-			<p class="p3">{{ analyzed_story.joy }}%</p>
-
-			<p class="p4">{{ analyzed_story.sadness }}%</p>
-
-			<p class="p5">{{ analyzed_story.disgust }}%</p>
-
-			<p class="p6">{{ analyzed_story.surprise }}%</p>
-		{% else %}
-	</div>
-	<p class="p1" style="padding-left: 33px; color: #0a0303;" >0%</p>
-
-	<p class="p2" style="padding-left: 33px; color: #0a0303;">0%</p>
-
-	<p class="p3" style="padding-left: 30px; color: #0a0303;">0%</p>
-
-	<p class="p4" style="padding-left: 34px; color: #0a0303;">0%</p>
-
-	<p class="p5" style="padding-left: 33px; color: #0a0303;">0%</p>
-
-	<p class="p6" style="padding-left: 28px; color: #0a0303;" >0%</p>
-{% endif %}
-	<br>
-		<p class="emotion">Emotion Predicted: {{ analyzed_story.analyzed_emotion }}</p>
-	</div>
-<script>
-	// JavaScript function to toggle the active state of the buttons
-	function toggleButton(button) {
-		// Remove active class from all buttons
-		var buttons = document.querySelectorAll('.my-button');
-		buttons.forEach(function(btn) {
-			btn.classList.remove('active');
-		});
-
-		// Add active class to the clicked button
-		button.classList.add('active');
-	}
-</script>
 </body>
 </html>
