--- a/emotion_prediction/templates/profile.html
+++ b/emotion_prediction/templates/profile.html
@@ -1,110 +1,84 @@
 {% load static %}
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Profile Page</title>
-    <!-- Font Awesome -->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css" />
-    <!-- CSS -->
-    <link rel="stylesheet" href="{% static 'assets/css/profile.css' %}" />
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
+    <link href="https://fonts.googleapis.com/css2?family=DM+Serif+Display:ital@0;1&family=Nabla&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="{% static 'newcss/profile.css' %}">
+    <title>Document</title>
+    <script>
+        window.onload = function() {
+            var select = document.getElementById('image-select');
+            var preview = document.getElementById('preview');
+
+            // Set the initial image
+            preview.src = select.value;
+
+            // Listen for change event on the select dropdown
+            select.addEventListener('change', function() {
+                // Change the preview image source when a new option is selected
+                preview.src = select.value;
+            });
+        };
+    </script>
 </head>
-<body >
-<div class="top">
-    <header id="header" class="header fixed-top d-flex align-items-center">
-        <div class="container-fluid d-flex align-items-center justify-content-between">
-            <a href="{% url 'home' %}" class="logo d-flex align-items-center me-auto me-xl-0">
-                <img src="{% static 'assets/img/icon.png' %}">
-            </a>
-            <center><h3 style="font-family: Palace Script MT; font-size: 40px;">Emotion-On</h3></center>
-            <!-- Nav Menu -->
-            <nav id="navmenu" class="navmenu">
-                <ul>
-                    <li><a href="{% url 'home' %}#hero">Home</a></li>
-                    <li><a href="{% url 'home' %}">About</a></li>
-                    <li><a href="{% url 'home' %}">Team</a></li>
-                    <li><a href="{% url 'home' %}#contact">Contact</a></li>
-                    <!-- <li><a href="{% url 'login' %}">Login</a></li> -->
-                    <span><li><a href="{% url 'profile' %}"><img src="{% static 'assets/img/user.png' %}"></a></span>
-                    <div class="sub-menu">
-                        <ul>
-                            <li> <a href="{% url 'password_change' %}">Change Password</a></li>
-                            <hr>
-                        </ul>
-                        
-                       
-                        <ul>
-                            <li> <a href="{% url 'logout' %}">Logout</a></li>
-                        </ul>
-                    </div>
-                    </li>
-                </ul>
-            </nav><!-- End Nav Menu -->
+<body>
+    <nav>
+        <img src="{% static 'newimg/log.png' %}" alt="">
+        <a class="four" href="">Home</a>
+        <a class="four" href="">About</a>
+        <a class="four" href="">Team</a>
+        <a href="" class="profile"><i class="bi bi-person-circle"></i></a>
+    </nav>
+    <div class="profile-container">
+        <div class="profile-img">
+            <select id="image-select">
+                <option selected disabled>Select</option>
+                <option value="{% static 'newimg/default.jpg' %}">Default</option>
+                <option value="{% static 'newimg/nassef.jpg' %}">Male</option>
+                <option value="{% static 'newimg/rona.jpg' %}">Female</option>
+            </select>
+            
+            <br>
+            <img id="preview" height="200px">
+
+            <div class="info">
+                <h3>{{ logged_user.first_name }} {{ logged_user.last_name }}</h3>
+                <p>Email: {{ logged_user.email }}</p>
+            </div>
         </div>
-        <script src="https://kit.fontawesome.com/b99e675b6e.js"></script>
-        <div class="wrapper">
-            <div class="left">
-                <img src="{% static 'assets/img/user.jpeg' %}" alt="user" width="100">
-                <h4>Name</h4>
-                <p>{{ logged_user.first_name }} {{ logged_user.last_name }}</p><br>
-                <hr>
-                <br>
-                <div class="optionA">
-                  <a class="a" href="{% url 'paragraph' %}">Analyze Again</a>
-                <br>
-                </div>
-
-                <div class="optionB">
-                  <a class="l" href="{% url 'logout' %}">Logout</a>
-                </div>
-
+        
+        <div class="recent">
+            <div class="txt">
+                <p>Recent Prediction</p>
             </div>
-            <div class="right">
-                <div class="info">
-                    <h2>INFORMATION</h2>
-                    <br>
-                    <div class="info_data">
-                        <div class="data">
-                            <h4>Email</h4>
-                            <p>{{ logged_user.email }}</p>
-                        </div>
-                        <div class="data">
-                            <h4>Username</h4>
-                            <p>{{ logged_user.username }}</p>
-                        </div>
-                    </div>
-                </div>
-                <hr><br>
-                <div class="projects">
-                    <h2>STORIES</h2>
-                    <div class="projects_data">
-                        <div class="data">
-                            <h4>Recent</h4>
-                            <ol>
-                                {% for phrases in user_stories|slice:":8" %}
-                                    <li>
-                                        <p>{{ phrases.phrase }} = {{ phrases.analyzed_emotion }}</p>
-                                    </li>
-                               
-                                {% endfor %}
-                                <br>
-                                <br>
-                                <div class="pagination">
-                                {% include 'includes/pagination.html' %}
-                                </div>
-                            </ol>
-                            <!-- <p>2</p>
-                            <p>3</p>
-                            <p>4</p> -->
-                        </div>
-                    </div>
-                </div>
+            <center><hr style="border: solid;width:80%"></center>
+            <div class="recent-info">
+                <p class="date">Date</p> 
+                <p class="input">Input</p> 
+                <p class="emotion">Emotion</p>
             </div>
+            
+            <div class="info-inside">
+                {% for phrases in user_stories|slice:":8" %}
+                <li>
+                    <p>{{ phrases.phrase }} = {{ phrases.analyzed_emotion }}</p>
+                </li>
+           
+            {% endfor %}
+            </div>               
+            <div class="pagination">
+                {% include 'includes/pagination.html' %}
+                </div>
         </div>
     </div>
-    <!-- Pagination -->
-    
+    <footer>
+        <p>&copy;EMOJI-ON || 2024</p>
+    </footer>
 </body>
 </html>
