--- a/emotion_prediction/templates/sign_up.html
+++ b/emotion_prediction/templates/sign_up.html
@@ -1,4 +1,4 @@
-
+{% comment %} 
 
 {% load static %}
 
@@ -138,5 +138,69 @@
             </div>
         </div>
     </section>
+</body>
+</html> {% endcomment %}
+{% load static %}
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
+    <link href="https://fonts.googleapis.com/css2?family=DM+Serif+Display:ital@0;1&family=Nabla&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="{% static 'newcss/signup.css' %}">
+    <title>Document</title>
+</head>
+<body>
+    <div class="nav">
+        <nav>
+            <img src="" alt="">
+            <a href="">Home</a>
+            <a href="">About</a>
+            <a href="">Contacts</a>
+            <a href="">Team</a>
+            <a href="{% url 'login' %}">Log In</a>
+        </nav>
+    </div>
+    <div class="container">
+        <center><div class="logo"><img src="{% static "newimg/log.png" %}" alt="" style="width:80%;"></div></center>
+
+        <form method="post" action="{% url 'register' %}">
+            {% csrf_token %}
+            
+            <div class="input">
+                <i class="bi bi-person-vcard icon"></i></i>&nbsp;
+
+                <input type="text" id="lastname" name="last_name" placeholder="Last Name">
+            </div>
+            <div class="input">
+                <i class="bi bi-person-vcard icon"></i></i>&nbsp;
+
+                <input type="text" id="firstname" name="first_name" placeholder="First Name">
+            </div>
+            <div class="input">
+                <i class="bi bi-person icon"></i>&nbsp;
+                <input type="text" id="username" name="username" placeholder="Username">
+            </div>
+            <div class="input">
+                <i class="bi bi-envelope icon"></i>&nbsp;
+                <input type="Email" id="email" name="email" placeholder="Email">
+            </div>
+            <div class="input">
+                <i class="bi bi-shield-lock icon"></i>
+                <input type="password" id="password" name="password" placeholder="Password">
+            </div>
+            <div class="input">
+                <i class="bi bi-key icon"></i>
+                <input type="password" id="confirm_password" name="confirm_password" placeholder="Confirm Password">
+            </div>
+            <div class="submit">
+                <input type="submit" name="register" value="Sign Up">
+            </div>
+            <div class="forgot">
+                <p>Already have an account?&nbsp; </p><a href="{% url 'login'%}">Log In</a>
+            </div>
+        </form>
+    </div>
 </body>
 </html>
