--- a/emotion_prediction/static/newcss/login.css
+++ b/emotion_prediction/static/newcss/login.css
@@ -4,8 +4,11 @@
 }
 
 body {
-    background-color: #cfdee6;
+    /* background-color: #cfdee6; */
     /* background-image: url(dove.jpg); */
+    background-image:url(../newimg/bg32.png) ;
+    background-repeat: no-repeat;
+    background-size: cover;
     display: flex;
     justify-content: center;
     align-items: center;
