--- a/emotion_prediction/templates/emoji.html
+++ b/emotion_prediction/templates/emoji.html
@@ -15,10 +15,11 @@
 <body>
     <nav>
         <img src="{% static 'newimg/log.png' %}" alt="">
-        <a class="four" href="{% url 'home' %}#hero">Home</a>
-        <a class="four" href="{% url 'home' %}#about">About</a>
-        <a class="four" href="{% url 'home' %}#team">Team</a>
+        <a class="four" href="{% url 'privhome' %}#hero">Home</a>
+        <a class="four" href="{% url 'privhome' %}#about">About</a>
+        <a class="four" href="{% url 'privhome' %}#team">Team</a>
         <a href="{% url 'profile' %}" class="profile"><i class="bi bi-person-circle"></i></a>
+        <a class="four" style="margin-left:10px" href="{% url 'home' %}#hero">Log Out</a>
     </nav>
     
     <main>
@@ -32,18 +33,16 @@
                         <h4 style="margin-left:-40%;font-size:18px;">Select Input: &nbsp; </h4>
 
                         <div 
-                        style="width:30%;background-color:white;text-align:center;border-radius:10px;" 
-                        
-                        class="input-active">
+                        style="width:30%;background-color:white;text-align:center;border-radius:10px;z-index:10;"class="input-active">
                             <a style="text-decoration:none;" href="{% url 'paragraph' %}">Sentece</a>
                         </div>
                         <div class="input-nonactive">
                             <a style="text-decoration:none;" href="{% url 'whole' %}">Whole Story</a>
                         </div> 
                     </div>
-					{{ form.story }}					
-					<input style="color: rgb(0, 0, 0);" class="analyze-btn"  name="analyze" id="analyze" type="submit" value="Analyze">
                     
+					{{ form.story }}						
+					<input style="color: rgb(0, 0, 0);" class="analyze-btn"  name="analyze" id="analyze" type="submit" value="Analyze">
                 </div>
             </div>
         </div>
@@ -150,10 +149,15 @@
                 </div>
             </div>
         </div>
+        <div class="download" style=" width:19%;margin:-12px auto;" >
+            {% if analyzed_story %}
+                <p >To download the result,click<i class="bi bi-arrow-right"></i><a style="text-decoration:none;" href="{% url 'download-result' %}">Download</button></a> </p>
+            {% endif %}
+        </div>
     </main>
     
     
-
+<br>
     <footer>
         <p>&copy;EMOJI-ON || 2024</p>
     </footer>
